Refactor ItemMapper to use Lombok's UtilityClass
Refactor ItemMapper to use Lombok's UtilityClass for cleaner code and simplify methods.